# pyntegrate

./: .gitignore  MANIFEST  README.md  arctan.c  config.toml  generate_whl.sh  help.py  install.sh  integrate.py  pyarctan.py  pyproject.toml  requirements.txt  setup.py  test_integrate.py
.github/workflows/: ci.yml  codeql-analysis.yml  gitlabsync.yml  main.yml  pre-release.yml  python-package.yml  python-publish.yml  release.yml  test-release.yml
examples/: help.py  integrate.py
pyntegrate/: ListLINQ.py  PyProjectDict.py  __init__.py  __version__.py  arctan.c  definitions.h  pyarctan.py
tests/: test_integrate.py  test_timed.py
